# fintracts

./: .dockerignore  .gitignore  BACKGROUND.md  JSON-SPECIFICATION.md  NOTES.md  README.md  RESEARCH.md  SPECIFICATION.md  app.bundle.js  app.bundle.js.map  app.css  app.css.map  ecosystem.drawio  go.mod  index.html  runtime.bundle.js  runtime.bundle.js.map  specification.go
builder/: Dockerfile  README.md  package-lock.json  package.json  run.sh
contracts/: example.txt
docs/: contract-spec.md  language-spec.md  parser.md  status.md
fintracts/: Dockerfile  Makefile  README.md  SPECIFICATION.md  fintracts.go  go.mod  go.sum  test.json  types.go  validate.go  validate_agreements.go  validate_primitives.go
parser/: .dockerignore  Dockerfile  Makefile  README.md  SPECIFICATION.md  agreements.go  build.sh  contract.txt  converter.go  dune  dune-project  fintracts.ml  fintracts.opam  go.mod  lexer.mll  lib.ml  parser.go  parser.mly  parser_test.go  primitives.go  types.go  types.ml
parser-go/: README.md  agreements.go  contract.txt  contract2.txt  go.mod  go.sum  main.go  parser.go  primitives.go  types.go  validate.go
parser/cmd/: main.go
parser/cmd/parser/: main.go
parser/contracts/: 1.json  2.json  3.json  4.json  5.json  6.json  6.txt  7.txt
parser/contracts/failures/: 2.txt  3.txt  4.txt  5.txt
parser/contracts/success/: 1.json  10.json  10.txt  2.json  2.txt  3.json  3.txt  4.json  4.txt  5.json  5.txt  6.json  7.json  7.txt  8.json  8.txt  9.json
validator/: Dockerfile  Makefile  README.md  utils.go  validate_agreements.go  validate_primitives.go  (+1 more)
(+82 files in other folders)
