(lang dune 2.9)

(name fintracts)

(generate_opam_files true)

(source (github hacdias/fintracts))
(license MIT)
(authors "Henrique Dias")
(maintainers "hacdias@gmail.com")

(package
 (name fintracts)
 (depends
  (yojson (>= 1.7.0))
  (ppx_deriving_yojson (>= 3.6.1))
  (core (>= 0.14.1))
  (dune (>= 1.5))))

(using menhir 2.0)
