(lang dune 2.9)
(name fintracts)
(version 1.0.0)

(generate_opam_files true)

(license MIT)
(authors "Henrique Dias <hacdias@gmail.com>")
(maintainers "Henrique Dias <hacdias@gmail.com>")
(source (github hacdias/fintracts))

(package
  (name fintracts)
  (synopsis "Financial contracts parser.")
  (description "Financial contracts parser.") 
  (depends
    (yojson (>= 1.7.0))
    (ppx_deriving_yojson (>= 3.6.1))
    (core (>= v0.14.1))
    (menhir (>= 20210419))))

(using menhir 2.0)
